--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <button class="btnn">Get Started  <i class="fa-solid fa-arrow-right"></i></button>
 
 	</div>
-	<div class="imgsrc"><img src="C:\Users\Anil\OneDrive\Pictures\Screenshots\Screenshot 2023-03-07 155029.png"/></div>
+	<div class="imgsrc"><img src="chairs.png"/></div>
 </section>
 <h2 class="head">Improved Services, Unbeatable Costs</h2>
 <p class="para">Investing in your business demands your energy, time, and money. For your small to medium business, thinking it’s challenging makes a lot of sense. That’s why at Scale Minds, we have devised solutions to meet your costs and save your time as well. Our services are designed to achieve the maximum results possible for a fraction of the costs involved elsewhere.With over 100 highly satisfied clients, we have pulled some serious numbers over the last few years.</p>
